WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304363
Fix nullptr crash in Page::mediaSessionManager
https://bugs.webkit.org/show_bug.cgi?id=304363
Summary
Fix nullptr crash in Page::mediaSessionManager
Alex Christensen
Reported
2025-12-17 15:03:13 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2025-12-17 15:03:15 PST
<
rdar://problem/166730931
>
Alex Christensen
Comment 2
2025-12-17 15:04:32 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55592
EWS
Comment 3
2025-12-17 16:19:05 PST
Committed
304632@main
(4907d061fa09): <
https://commits.webkit.org/304632@main
> Reviewed commits have been landed. Closing PR #55592 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug