Fix nullptr crash in Page::mediaSessionManager https://bugs.webkit.org/show_bug.cgi?id=304363 rdar://166730931

Reviewed by Ben Nham.

m_mediaSessionManagerFactory can return null when it comes from the page configuration.
Gracefully return null when this happens.  Future work needs to be done in WebPage.cpp,
but that can be done later.  This should make it not crash.

* Source/WebCore/page/Page.cpp:
(WebCore::Page::mediaSessionManager):
* Source/WebKit/WebProcess/WebPage/WebPage.cpp:
(WebKit::m_toolbarsAreVisible):

Canonical link: https://commits.webkit.org/304632@main